--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
  <head>
   <title>Stuff About Panda's</title>
+   <link rel="stylesheet href="styles.css">
  </head>
  <body>
   <nav>
@@ -10,7 +11,7 @@
 <h1>Research from Panda's</h1>
 <div id="introduction_panda's>
 <!-- Start of "Introduction to Panda's -->
-    
+    <p>Have you ever wondered what those fluffy animals that always eat bamboo are? Well, they're <strong>Panda's</strong>. Panda's are</p>
     
 
 
